Made changes to the media queries of the recipeIndex page to fix layout issue

--- a/css/recipeIndex.css
+++ b/css/recipeIndex.css
@@ -23,8 +23,8 @@
 	float: left;
 	width: 50%;
 	padding: 10px;
-	margin-left: 55px;
-	margin-right:;
+	margin-left: 75px;
+	
 }
   
 .row:after {
@@ -32,26 +32,45 @@
 	display: table;
 	clear: both;
 }
-
-@media only screen and (max-width: 1024px) { 
+@media only screen and (min-width: 1281px){ 
 	.card{
-		width:49%;
-		margin-left:6px;
+		width:39%;
+		margin-left:6rem;
+	}
+	
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1280px){ 
+	.card{
+		width:38%;
+		margin-left:5.5rem;
 	}
 	
 }
   
-@media only screen and (max-width: 768px) { 
+@media only screen and (min-width: 769px) and (max-width: 1023px) { 
 	.card {
-		width:48%;
-		margin-left:10px;
+		width:40%;
+		margin-left:4.5rem;
+		margin-right: -2.5rem;
 	}
 	
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width:600px) and (max-width: 768px) {
+	.card {
+		width: 80%;
+		margin-left:4rem;
+
+		
+	}
+}
+
+@media screen and (max-width:599px){
 	.card {
 		width: 100%;
-		margin-left:0px;
+		margin-left:0rem;
+
+		
 	}
 }
